--- a/TrainBot/packages.config
+++ b/TrainBot/packages.config
@@ -7,6 +7,7 @@
   <package id="Discord.Net.Rest" version="3.7.2" targetFramework="net472" />
   <package id="Discord.Net.Webhook" version="3.7.2" targetFramework="net472" />
   <package id="Discord.Net.WebSocket" version="3.7.2" targetFramework="net472" />
+  <package id="FuzzySharp" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
